--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ description: "Presentation for Fall 2024 Information Landscapes Series"
 keywords: 
 # featured-image is added to metadata tags for social media sharing
 # use a relative path to image in this repository or full URL
-featured-image: "/images/banner.jpg"
+featured-image: "/images/banner.gif"
 # add search box to footer? true/false
 search: true
 
@@ -43,11 +43,11 @@ source-code: https://github.com/aweymo-ui/geolocation
 #
 # use url for the domain, e.g. https://evanwill.github.io
 # on gh-pages follow the pattern: https://username.github.io
-url:
+url: https://aweymo-ui.github.io/
 # use baseurl to add subsection of the domain, e.g. /workshop-template-b
 # on gh-pages this is a / followed by the name of the repository
 # baseurl is your github repository's name prefixed with a /
-baseurl:
+baseurl: /geolocation
 
 
 ##########
